# token-vault-proxy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
.claude/skills/: auth0-token-vault-proxy
.github/workflows/: ci.yml  release.yml
deployment/: install.sh
docs/: PROMPTS.md  RUST_FEASIBILITY.md  review-report.md
docs/brainstorms/: 2026-03-30-token-vault-proxy-rust-cli-requirements.md
docs/plans/: 2026-03-30-001-feat-rust-token-vault-proxy-cli-plan.md  2026-03-30-002-feat-rust-token-vault-proxy-plan.md  2026-03-30-003-feat-rust-token-vault-proxy-merged-plan.md  2026-03-30-004-feat-rust-e2e-test-port-plan.md
hooks/: pre-commit
skills/auth0-token-vault-proxy/: SKILL.md
skills/auth0-token-vault-proxy/references/: commands.md
src/: cli.rs  main.rs
src/auth/: callback_server.rs  connected_accounts.rs  mod.rs  oidc_config.rs  pkce_flow.rs  token_exchange.rs  token_refresh.rs
src/commands/: connect.rs  connections.rs  disconnect.rs  fetch.rs  init.rs  login.rs  logout.rs  mod.rs  status.rs
src/registry/: mod.rs
src/store/: backend.rs  credential_store.rs  file_backend.rs  keyring_backend.rs  mod.rs  types.rs
src/utils/: config.rs  confirm.rs  error.rs  exit_codes.rs  http.rs  mod.rs  output.rs  prompt.rs  time.rs
tests/: cli_integration.rs  e2e_flow.rs
tests/e2e/: fake_browser.sh  fixture.rs  mock_server.rs  mod.rs
tests/e2e/fake_init_scripts/: auth0  npx
