[package]
name = "token-vault-proxy"
version = "0.1.0"
edition = "2021"
description = "Authenticated HTTP proxy for third-party services via Auth0 Token Vault"
license = "MIT"

[[bin]]
name = "tv-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
jsonwebtoken = "9"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
open = "5"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = true
strip = true
codegen-units = 1
